feat(worker): add output management and enhance task handling